update jacoco for sonar and updated docker publish